manifests/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: mysql:5.7.28
          name: db
          ports:
            - containerPort: 3306
              hostPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: dbvol
      restartPolicy: Always
      volumes:
        - name: dbvol
          persistentVolumeClaim:
            claimName: db-pvc
