manifests/wiki-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath -o ./
    kompose.version: "1.32.0 (HEAD)"
  labels:
    io.kompose.service: mediawiki
  name: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mediawiki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mediawiki
    spec:
      containers:
        - image: localhost:32000/mediawiki:1.0.0
          name: wiki
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html/images
              name: imgvol
            - mountPath: /var/www/html/del-images
              name: delimgvol
            - name: mediawiki-config
              mountPath: /var/www/html/LocalSettings.php
              subPath: LocalSettings.php
      restartPolicy: Always
      volumes:
        - name: imgvol
          persistentVolumeClaim:
            claimName: img-pvc
        - name: delimgvol
          persistentVolumeClaim:
            claimName: delimg-pvc
        - name: mediawiki-config
          configMap:
            name: mediawiki-config
