manifests/mediawiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediawiki
  name: mediawiki
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: mediawiki
  type: ClusterIP
