manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediawiki-ingress
  annotations:
    cert-manager.io/cluster-issuer: le-cf-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: wiki-old.uniproject-tech.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mediawiki
            port:
              number: 80
  tls:
  - hosts:
    - wiki-old.uniproject-tech.net
    - www.wiki-old.uniproject-tech.net
    secretName: mediawiki-tls
